# Simon

./: .gitignore  README.md
HTML/Portfolio/: MAIN.css  MAIN.html
HTML/Projects/: main.css  main.html  main.js
HTML/Projects/Games/: games.css  games.html
HTML/Projects/Other/: other.css  other.html  other.js
HTML/Projects/Simon/: simon.css  simon.html
HTML/Projects/SimonBucka/: MAIN.css  MAIN.html
LeetCode/: test.js
SWI/2. semester/AP2AE, AK2AE/: Rozlíšenie (pixel).pptx  StavbaPC.docx  Zadání SMBIOS.docx  Šimon Bučka semestrální práce.docx  Šimon_Bučka_Bios.docx
SWI/2. semester/CJVAJPA4/: AJPA4 Oral Exam Topics.docx  AJPA4 essay Šimon Bučka.docx  Opinion Essay.docx  ukol2_kadavy.docx
SWI/3. semester/Fyzika/: Fyzika.md
SWI/3. semester/Opsys/: Bucka_Simon_Protokol1.doc  zapocet.md
SWI/3. semester/TI/: Simon_Bucka_Ukol1.docx  Simon_Bucka_Ukol2.docx  Simon_Bucka_Ukol3.docx  Simon_Bucka_Ukol4.docx  Ukol2.py  Ukol3.py
SWI/4. semester/Algoritmy a datové struktury/: Poznamky.md
SWI/4. semester/Algoritmy a datové struktury/Cvika/Ukol 4/Heap-master/src/: CMakeLists.txt  heap.c
SWI/4. semester/Algoritmy a datové struktury/Cvika/Ukol 7/hash_table-master/src/: CMakeLists.txt  table.c
SWI/4. semester/Algoritmy a datové struktury/Cvika/Ukol 8/dijkstras_algorithm-master/app/: CMakeLists.txt
SWI/4. semester/Algoritmy a datové struktury/Cvika/Ukol 8/dijkstras_algorithm-master/src/: CMakeLists.txt  dijkstra.c  heap.c
SWI/4. semester/Optimalizační metody/: Otazky pro A4OM.docx  Otazky.md  Prokop1 - Optimalizace.DOCX  Z13.docx  Z13.md  Z13_1.py  Zadani2023k.doc  dynamicke_programovanie.py  message.md  ~$Z13.docx  Šimon_Bučka_Z13.docx
SWI/4. semester/Počítačové sítě/: FULL_TAHAK_UPDATE.docx  poznamky.md  tahak.md
SWI/4. semester/Softwarové technológie v prumyslu/: Poznamky.md  Semestralka_ST.docx  Šimon_Bučka_Semestralka_ST.docx
SWI/4. semester/Technologie www/: odpovede.md
SWI/4. semester/Testování software/: AP4TS_test.md  AP4TS_test_2.md  Robo_Poznamky_1.Test.md  log.html  output.xml  report.html
SWI/5. semester/Embedded systémy s mikropočítači/: Poznámky.md
SWI/5. semester/Pokročilé webové technologie/: eezi_popis.md
SWI/5. semester/Vývoj síťových aplikací/: AP5VS_uvod.pptx
SWI/6. semester/AP6PE_ekonomika/: otazky.md  poznamky.md  projekt.md  projekt.pptx
SWI/Fyzika/: FyzikaResenePriklady.md  FyzikaVelicinyKonstanty.md
SWI/Kryptologie/ADFGVX/: ADFGVX.py  ADFGVX_UI.ui  ADFGVX_UI_ui.py
SWI/Kryptologie/Elektronicky_Podpis/: Digital_Signature.ui  Digital_Signature_ui.py  Elektronicky_podpisUi.py  generate_keys.py  hash_message.py
SWI/Kryptologie/PlayFair/: PlayFairUI.ui  PlayFairUI_ui.py
SWI/Kryptologie/RSA/: RSA.py
SWI/Kryptologie/Steganografie/: SteganoUI.ui  SteganoUI_ui.py
SWI/TI/: Ukol1.py  Ukol4.py  Ukol5.py  Untitled-1.py
SWI/_/: Matika.md  wiggle.py  Šablona semestrální práce.docx
(+554 files in other folders)
